# test

./: CMakeLists.txt  README.md  transformer.py
cpp/: CMakeLists.txt
cpp/include/: tokenizer.h
cpp/src/: main.cpp  tokenizer.cpp
cpp/tests/: CMakeLists.txt  test_tokenizer.cpp
docs/: 001_DETAILED_PLAN.md  DEV_PROCESS.md  POC_SPEC.md
poc/: README.md  app.py  requirements.txt
